--- a/src/CodeGator/CodeGator.csproj
+++ b/src/CodeGator/CodeGator.csproj
@@ -7,6 +7,8 @@
     <Description>General framework elements used by other CodeGator solutions</Description>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageIcon>packageDefaultIcon-128x128.png</PackageIcon>
+    <PackageProjectUrl>https://github.com/CodeGator/CodeGator</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/CodeGator/CodeGator</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
